--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: pull_to_zoom_refresh
 description: pull_to_zoom_refresh
 version: 0.0.1
 author: John Guo <guoyuanzhuang@gmail.com>
-homepage:
+homepage: https://github.com/guoyuanzhuang/pull_to_zoom_refresh
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
